--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
      crossorigin="anonymous"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="UTF-8">
-        <title>Odd Games</title>
+        <title>MGN Game Source</title>
       <link rel="icon" type="image/x-icon" href="./icons/favicon.ico">
-        <meta property="og:title" content="Play unblocked games online" />
+        <meta property="og:title" content="MONKE Gaming's Source, you probably shouldnt be here." />
         <meta property="og:description" content="All of the most popular games playable in your browser! With games such as Subway Surfers, 1v1.lol, Retrobowl, Slope, and many more fun games!" />
         <link rel="stylesheet" href="css/style.css">
         <script src="https://kit.fontawesome.com/d0c5025972.js" crossorigin="anonymous"></script>
@@ -16,7 +16,7 @@
     <body>
             <!--Page Content Below-->
         <img id="userPhoto" class="animated rubberBand fast" src="icons/logo.png" alt="Your Name's Photo">
-        <h1 class="animated jello game_title">Unblocked Games</h1>
+        <h1 class="animated jello game_title">Ooga Booga Games</h1>
         <div id="links" class="animated fadeInLeft delay-1s games">
             <div class="game_title"><input placeholder="Search" id="search" class="search" onkeyup="search_it()" type="search"><select id="tags" class="button" onclick="search_it()"><option value="all">All</option><option value="pop">Popular</option><option value="two">Two Player</option><option value="stream">Streaming</option><option value="bad">Bad Games</option></select></div>
             <h2 class="animated jello game_title">All Games:</h2>
