--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img id="userPhoto" class="animated rubberBand fast" src="icons/logo.png" alt="Your Name's Photo">
         <h1 class="animated jello game_title">Ooga Booga Games</h1>
         <div id="links" class="animated fadeInLeft delay-1s games">
-            <div class="game_title"><input placeholder="Search" id="search" class="search" onkeyup="search_it()" type="search"><select id="tags" class="button" onclick="search_it()"><option value="all">All</option><option value="pop">Popular</option><option value="two">Two Player</option><option value="stream">Streaming</option><option value="bad">Bad Games</option></select></div>
+            <div class="game_title"><input placeholder="Search" id="search" class="search" onkeyup="search_it()" type="search"><select id="tags" class="button" onclick="search_it()"><option value="all">All</option><option value="pop">Popular</option><option value="two">Two Player</option><option value="stream">Streaming</option><option value="bad">Bad Games</option><option value="sus">Sus Games</option></select></div>
             <h2 class="animated jello game_title">All Games:</h2>
             <a id="1 (2048 game)" class="link" href="./play/1/" target="_blank"><span class="bar"></span><img src="./icons/one.webp" alt="1 (2048 game)"><b>1 (2048 game)</b></a>
             <a id="100 Player Pong" class="glink" href="./play/100-player-pong/" target="_blank"><span class="bar"></span><img src="./icons/100pong.webp"><b>100 Player Pong</b></a>
@@ -162,7 +162,7 @@
             <a id="Tower Master" class="link" href="./play/towermaster/" target="_blank"><span class="bar"></span><img src="./icons/towermaster.webp"><b>Tower Master</b></a>
             <a id="Tunnelrush" class="link" href="./play/tunnelrush/" target="_blank"><span class="bar"></span><img src="./icons/tunnelrush.webp"><b>Tunnelrush</b></a>
             <a id="TV Static" class="link" href="./play/tv-static/" target="_blank"><span class="bar"></span><img src="./icons/tv-static.webp"><b>TV Static</b></a>
-            <a id="Twerk Race 3D" class="link" href="./play/twerk-race-3d/" target="_blank"><span class="bar"></span><img src="./icons/twerk-race-3d.webp"><b>Twerk Race 3D</b></a>
+            <a id="Twerk Race 3D" class="link" href="./play/twerk-race-3d/" target="_blank"><span class="bar"></span><img src="./icons/twerk-race-3d.webp"><b>yo wtf caught in 4K</b></a> <span class="badge"><i class="fa-solid fa-star"></i> SUS</span></a>
             <a id="Twitch Tetris" class="link" href="./play/twitch-tetris/" target="_blank"><span class="bar"></span><img src="./icons/twitch-tetris.webp"><b>Twitch Tetris</b></a>
             <a id="Tyrone Tetris" class="link" href="./play/tyronetetris/" target="_blank"><span class="bar"></span><img src="./icons/tetris.webp"><b>Tyrone Tetris</b></a>
             <a id="VELOCE" class="link" href="./play/veloce/" target="_blank"><span class="bar"></span><img src="./icons/VELOCE.webp"><b>VELOCE</b></a>
@@ -185,7 +185,7 @@
             <a id="Zombs Royale" class="link" href="./play/zombs-royale/" target="_blank"><span class="bar"></span><img src="./icons/zombs-royale.webp"><b>Zombs Royale</b></a>
             <a id="Yoshifabrication" class="link" href="./play/yoshifabrication/" target="_blank"><span class="bar"></span><img src="./icons/yoshifabrication.webp"><b>Yoshifabrication</b></a>
             <a id="Zoro" class="link stream" href="./play/zoro/" target="_blank"><span class="bar"></span><img src="./icons/zoro.webp"><b>Zoro.to</b><span class="badge"><i class="fa-solid fa-file-video"></i> STREAMING</span></a>
-             <p class="game_title">MONKE Gaming's Source, you probably shouldnt be here. Instead, you should be playing <a class="epci" href="https://www.monkegaming.cf">on the actual site.</a></p>
+             <p class="game_title">MONKE Gaming's Source, you probably shouldnt be here. Instead, you should be playing<a class="epci" href="https://www.monkegaming.cf"> on the actual site.</a></p>
         </div>
 
 <!-- Popular games stats -->
