--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             <a id="Tower Master" class="link" href="./play/towermaster/" target="_blank"><span class="bar"></span><img src="./icons/towermaster.webp"><b>Tower Master</b></a>
             <a id="Tunnelrush" class="link" href="./play/tunnelrush/" target="_blank"><span class="bar"></span><img src="./icons/tunnelrush.webp"><b>Tunnelrush</b></a>
             <a id="TV Static" class="link" href="./play/tv-static/" target="_blank"><span class="bar"></span><img src="./icons/tv-static.webp"><b>TV Static</b></a>
-            <a id="Twerk Race 3D" class="link" href="./play/twerk-race-3d/" target="_blank"><span class="bar"></span><img src="./icons/twerk-race-3d.webp"><b>yo wtf caught in 4K</b></a> <span class="badge"><i class="fa-solid fa-star"></i> SUS</span></a>
+            <a id="Twerk Race 3D" class="link" href="./play/twerk-race-3d/" target="_blank"><span class="bar"></span><img src="./icons/twerk-race-3d.webp"><b>yo wtf caught in 4K</b><span class="badge"><i class="fa-solid fa-star"></i> SUS</span></a>
             <a id="Twitch Tetris" class="link" href="./play/twitch-tetris/" target="_blank"><span class="bar"></span><img src="./icons/twitch-tetris.webp"><b>Twitch Tetris</b></a>
             <a id="Tyrone Tetris" class="link" href="./play/tyronetetris/" target="_blank"><span class="bar"></span><img src="./icons/tetris.webp"><b>Tyrone Tetris</b></a>
             <a id="VELOCE" class="link" href="./play/veloce/" target="_blank"><span class="bar"></span><img src="./icons/VELOCE.webp"><b>VELOCE</b></a>
