--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             <a id="Cyber City Driver" class="link two" href="./play/cyber-city-driver/" target="_blank"><span class="bar"></span><img src="./icons/cyber.webp"><b>Cyber City Driver</b><span class="badge"><i class="fa-solid fa-user"></i> 2 Player</span></a>
             <a id="Disc US" class="link two" href="./play/discus/" target="_blank"><span class="bar"></span><img src="./icons/sus.webp"><b>Disc US</b><span class="badge"><i class="fa-solid fa-user"></i> 2 Player</span></a>
             <a id="Doge miner" class="link" href="./play/dogeminer/" target="_blank"><span class="bar"></span><img src="./icons/Dogecoin.webp"><b>Doge miner</b></a>
+            <a id="Doge Miner 2" class="link" href="./play/DogeMiner2/" target="_blank"><span class="bar"></span><img src="./icons/DogeMiner2.webp"><b>Doge Miner 2</b></a>
             <a id="Doodle Jump" class="link" href="./play/doodlejump/" target="_blank"><span class="bar"></span><img src="./icons/doodle.webp"><b>Doodle Jump</b></a>
             <a id="Drift City" class="link" href="./play/drift-city/" target="_blank"><span class="bar"></span><img src="./icons/driftc.webp"><b>Drift City</b></a>
             <a id="DriftKing.io" class="link" href="./play/driftking/" target="_blank"><span class="bar"></span><img src="./icons/driftking.webp"><b>DriftKing.io</b></a>
@@ -187,7 +188,7 @@
             <a id="Zoro" class="link stream" href="./play/zoro/" target="_blank"><span class="bar"></span><img src="./icons/zoro.webp"><b>Zoro.to</b><span class="badge"><i class="fa-solid fa-file-video"></i> STREAMING</span></a>
             <a id="Monkey Mart" class="link" href="./play/MonkeyMart/" target="_blank"><span class="bar"></span><img src="./icons/monkeymart.webp"><b>Monkey Mart</b>
                 
-                <p class="game_title">MONKE Gaming's Source, you probably shouldnt be here. Instead, you should be playing<a class="epci" href="https://www.monkegaming.cf"> on the actual site.</a></p>
+            <p class="game_title">MONKE Gaming's Game Source. You probably shouldnt be here. Instead, you should be playing on <a class="epci" href="https://games.mgn.lol">the actual site.</a> 
         </div>
 
 <!-- Popular games stats -->
