--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@
             <a id="Zombs Royale" class="link" href="./play/zombs-royale/" target="_blank"><span class="bar"></span><img src="./icons/zombs-royale.webp"><b>Zombs Royale</b></a>
             <a id="Yoshifabrication" class="link" href="./play/yoshifabrication/" target="_blank"><span class="bar"></span><img src="./icons/yoshifabrication.webp"><b>Yoshifabrication</b></a>
             <a id="Zoro" class="link stream" href="./play/zoro/" target="_blank"><span class="bar"></span><img src="./icons/zoro.webp"><b>Zoro.to</b><span class="badge"><i class="fa-solid fa-file-video"></i> STREAMING</span></a>
-            <a id="Monkey Mart" class="link" href="./play/MonkeyMart/" target="_blank"><span class="bar"></span><img src="./icons/monkeymart.webp"><b>Monkey Mart</b>  
+            <a id="Monkey Mart" class="link" href="./play/MonkeyMart/" target="_blank"><span class="bar"></span><img src="./icons/monkeymart.webp"><b>Monkey Mart</b></a>
             <p class="game_title">MONKE Gaming's Game Source. You probably shouldnt be here. Instead, you should be playing on <a class="epci" href="https://games.mgn.lol">the actual site.</p>
-
+        </div>
 <!-- Popular games stats -->
 <script>
   var _paq = window._paq = window._paq || [];
