--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
             <a id="Zoro" class="link stream" href="./play/zoro/" target="_blank"><span class="bar"></span><img src="./icons/zoro.webp"><b>Zoro.to</b><span class="badge"><i class="fa-solid fa-file-video"></i> STREAMING</span></a>
             <a id="Monkey Mart" class="link" href="./play/MonkeyMart/" target="_blank"><span class="bar"></span><img src="./icons/monkeymart.webp"><b>Monkey Mart</b></a>
             <p class="game_title">MONKE Gaming's Game Source. You probably shouldnt be here. Instead, you should be playing on <a class="epci" href="https://games.mgn.lol">the actual site.</p>
+            <p class="game_title"> <a class="epci" href="/play/policies/privacy">Privacy Policy</p>
         </div>
 <!-- Popular games stats -->
 <script>
