--- a/play/ovo/index.html
+++ b/play/ovo/index.html
@@ -10,6 +10,6 @@
     <meta name="robots" content="noindex,nofollow" />
 </head>
 <body style="background-color:black">
-    <iframe src="https://bg.kardna4life.tk/" width="1920" height="1080" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;"></iframe>
+    <iframe src="https://raw.githack.com/3kh0/3kh0-assets/main/ovo/index.html" width="1920" height="1080" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;"></iframe>
 </body>
 </html>
