--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
      crossorigin="anonymous"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="UTF-8">
-        <title>MGN Game Source</title>
+        <title>Fog Network Gam3 Files</title>
       <link rel="icon" type="image/x-icon" href="./icons/favicon.ico">
-        <meta property="og:title" content="MONKE Gaming's Source, you probably shouldnt be here." />
+        <meta property="og:title" content="hi" />
         <meta property="og:description" content="All of the most popular games playable in your browser! With games such as Subway Surfers, 1v1.lol, Retrobowl, Slope, and many more fun games!" />
         <link rel="stylesheet" href="css/style.css">
         <script src="https://kit.fontawesome.com/d0c5025972.js" crossorigin="anonymous"></script>
@@ -16,12 +16,12 @@
     <body>
             <!--Page Content Below-->
         <img id="userPhoto" class="animated rubberBand fast" src="icons/logo.png" alt="Your Name's Photo">
-        <h1 class="animated jello game_title">Ooga Booga Games</h1>
+        <h1 class="animated jello game_title">Fog Network Gam3 Files</h1>
         <div id="links" class="animated fadeInLeft delay-1s games">
             <div class="game_title"><input placeholder="Search" id="search" class="search" onkeyup="search_it()" type="search"><select id="tags" class="button" onclick="search_it()"><option value="all">All</option><option value="pop">Popular</option><option value="two">Two Player</option><option value="stream">Streaming</option><option value="bad">Bad Games</option></select></div>
             <h2 class="animated jello game_title">All Games:</h2>
-            <a id="Monke Gaming" class="link" href="https://games.mgn.lol/" target="_blank"><span class="bar"></span><img src="./icons/one.webp" alt="Monke Gaming"><b>Monke Gaming</b></a>
-            <p class="game_title">MONKE Gaming's Game Source. You probably shouldnt be here. Instead, you should be playing on <a class="epci" href="https://games.mgn.lol">the actual site.</p>
+            <a id="esfesf" class="link" href="https://mgn.lol/" target="_blank"><span class="bar"></span><img src="./iconsrgesf" alt="f"><b>ewsfse</b></a>
+            <p class="game_title">where we store the files<a class="epci" href="https://mgn.lol">the actual site.</p>
             <p class="game_title"> <a class="epci" href="/play/policies/privacy">Privacy Policy</p>
         </div>
 <!-- Popular games stats -->
