--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
   })();
 </script>
-<!-- Popular games stats -->
+<!-- Popular games statss -->
 
             
         <script>
